// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogPostCommentsList Component renders the UI as expected 1`] = `
<body>
  <div>
    <section
      class="BlogPostCommentsList"
    >
      <header>
        <h2>
          Comments
        </h2>
      </header>
      <ul>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/1"
          >
            User1
          </a>
          <p
            class="Comment__content"
          >
            These are all great lessons!
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Dec 19 2020 07:37:16
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/1"
          >
            User1
          </a>
          <p
            class="Comment__content"
          >
            I can't wait to try these seasoning combinations in my next meal!
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Dec 17 2020 08:37:52
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/4"
          >
            User4
          </a>
          <p
            class="Comment__content"
          >
            I wish I knew these when I started learning to cook!
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Jan 05 2021 08:28:28
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/4"
          >
            User4
          </a>
          <p
            class="Comment__content"
          >
            Great advice!  This'll help me save so much money feeding my three teenagers!
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Dec 31 2020 09:24:43
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/2"
          >
            FakeUser2
          </a>
          <p
            class="Comment__content"
          >
            What an insightful post
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Jan 01 2021 10:31:39
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/3"
          >
            User3
          </a>
          <p
            class="Comment__content"
          >
            I know, right?
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Dec 19 2020 08:37:16
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/4"
          >
            User4
          </a>
          <p
            class="Comment__content"
          >
            It's amazing what you can learn from cooking
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Dec 20 2020 10:43:16
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/5"
          >
            User5
          </a>
          <p
            class="Comment__content"
          >
            Huh, I never thought about it this way
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Dec 17 2020 20:12:16
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/6"
          >
            User6
          </a>
          <p
            class="Comment__content"
          >
            Comment9
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Dec 12 2020 07:07:07
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/7"
          >
            User7
          </a>
          <p
            class="Comment__content"
          >
            Comment10
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Dec 19 2020 15:22:16
          </p>
        </li>
      </ul>
      <div
        class="TransitionButtons"
      >
        <button
          class="TransitionButtons__prev"
          disabled=""
          type="button"
        >
          Previous
        </button>
        <button
          class="TransitionButtons__next"
          type="button"
        >
          Next
        </button>
      </div>
    </section>
  </div>
</body>
`;

exports[`BlogPostCommentsList Component switches to the next group of comments after clicking 'Next' 1`] = `
<body>
  <div>
    <section
      class="BlogPostCommentsList"
    >
      <header>
        <h2>
          Comments
        </h2>
      </header>
      <ul>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/8"
          >
            User8
          </a>
          <p
            class="Comment__content"
          >
            Comment11
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Dec 15 2020 17:18:19
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/5"
          >
            User5
          </a>
          <p
            class="Comment__content"
          >
            Comment12
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Jan 01 2021 12:13:14
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/5"
          >
            User5
          </a>
          <p
            class="Comment__content"
          >
            Comment13
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Jan 02 2021 13:14:15
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/5"
          >
            User5
          </a>
          <p
            class="Comment__content"
          >
            Comment14
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Jan 05 2021 06:07:08
          </p>
        </li>
        <li
          class="Comment"
        >
          <a
            class="Comment__creator"
            href="/users/5"
          >
            User5
          </a>
          <p
            class="Comment__content"
          >
            Comment15
          </p>
          <p
            class="timestamp"
          >
            Last edited: 
            Jan 03 2021 20:21:22
          </p>
        </li>
      </ul>
      <div
        class="TransitionButtons"
      >
        <button
          class="TransitionButtons__prev"
          type="button"
        >
          Previous
        </button>
        <button
          class="TransitionButtons__next"
          disabled=""
          type="button"
        >
          Next
        </button>
      </div>
    </section>
  </div>
</body>
`;
